# Baseline-Agentic-RAG-Chatbot

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  main.py  pyproject.toml
.agents/: AGENTS.md
.github/workflows/: ci.yml
app/: database.py
app/auth/: exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py
app/auth/security/: __init__.py  api_key.py  jwt.py  password.py
app/configs/: auth.py  crawl.py  dbs.py  ingest.py  llm.py  selectors.yaml  yaml_loader.py
app/crawl/: __init__.py  models.py  repository.py  routes.py  schemas.py  selectors.yaml  service.py
app/crawl/engine/: crawler.py  scraper.py  storage.py  utils.py
app/embeddings/: __init__.py  base.py  oci.py
app/faq/: repository.py  routes.py
app/ingest/: __init__.py  chunker.py  models.py  parser.py  routes.py  schemas.py  service.py
app/llm/: oci.py
app/search/: routes.py  schemas.py
app/storage/: __init__.py  factory.py  interface.py  local.py  minio.py
app/vector_store/: __init__.py  factory.py  interface.py  milvus.py  pgvector.py
docs/: selectors_guide.md
docs/debugging/: 07-14-2026-crawler.md  dd-mm-yy-module-or-feature-sample.md
docs/decisions/: ADR-002-async-api-key-authentication.md  ADR-003-modular-playwright-crawler.md  ADR-004-domain-modular-oci-adapters.md  ADR-005-rrf-hybrid-search-and-table-reconstruction.md  SAMPLE-ADR-002-postgres-over-mongo.md
docs/routes/: auth.md  crawl.md  ingest.md
experiments/: parse_html_tables_custom.py  parse_html_tables_pandas.py
libs/shared/: pyproject.toml
libs/shared/shared/: __init__.py
libs/shared/shared/database/: __init__.py  mongo.py
libs/shared/shared/telemetry/: __init__.py  logging.py
scratch/: test_milvus.py
services/knowledge/: Dockerfile  main.py  pyproject.toml
services/knowledge/app/: mongo.py
services/knowledge/app/auth/: models.py  repository.py  routes.py  schemas.py  service.py
services/knowledge/app/auth/security/: __init__.py
services/knowledge/app/configs/: categories.yaml  dbs.py
services/knowledge/app/crawl/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
services/knowledge/app/crawl/engine/: crawler.py  scraper.py  storage.py  utils.py
services/knowledge/app/faq/: repository.py
services/knowledge/app/ingest/: routes.py  schemas.py  service.py
services/knowledge/app/llm/: __init__.py  base.py
services/knowledge/app/search/: routes.py  schemas.py  service.py
services/knowledge/app/storage/: interface.py
services/knowledge/app/vector_store/: __init__.py  factory.py  interface.py  milvus.py
services/knowledge/scratch/: import_and_ingest_crawled.py
services/knowledge/tests/: conftest.py  test_adapters.py  test_oci_llm.py
services/knowledge/tests/auth/: test_security.py
services/knowledge/tests/ingest/: test_ingest.py
services/knowledge/tests/ingest/assets/: table_html_2.html.md  table_html_3.html.md  table_html_4.html.md
services/knowledge/tests/search/: test_search.py
storage_buckets/crawls/tasks/3/html/: www_dcb_bank_in_home_7eecc32d.html
storage_buckets/crawls/tasks/4/html/: www_dcb_bank_in_home_7eecc32d.html
storage_buckets/crawls/tasks/5/html/: www_dcb_bank_in_apply-now_6ac18eae.html  (+9 more)
tests/: clean_task_11.py  conftest.py  test_adapters.py  test_oci_embeddings.py
tests/auth/: test_endpoints.py  test_security.py
tests/crawl/: test_crawler.py
tests/faq/: test_faq_routes.py
tests/ingest/: test_ingest.py
tests/ingest/assets/: table_html_1.html.md
tests/search/: test_search.py
