[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "httpx2>=2.5.0",
    "lxml>=6.1.1",
    "pdfplumber>=0.11.4",
    "playwright>=1.49.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pyyaml>=6.0.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
