[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "httpx2>=2.5.0",
    "lxml>=6.1.1",
    "pdfplumber>=0.11.4",
    "playwright>=1.49.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pyyaml>=6.0.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
    "bs4>=0.0.2",
    "pandas>=3.0.3",
    "pgvector>=0.5.0",
    "tiktoken>=0.13.0",
    "redis>=8.0.1",
    "python-multipart",
    "minio>=7.2.20",
    "oci>=2.120.0",
    "html2text>=2025.4.15",
    "tabulate>=0.9.0,<0.10.0",
    "deepeval>=4.0.0",
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "pymilvus",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
markers = [
  "real_oci: mark test as executing real OCI API calls"
]

[tool.uv.workspace]
members = ["services/*", "libs/*"]
