[project]
name = "shared"
version = "0.1.0"
description = "Shared modules for MongoDB connections, logs, and security helpers"
requires-python = ">=3.13"
dependencies = [
    "pymongo>=4.12.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
