[project]
name = "knowledge"
version = "0.1.0"
description = "Knowledge Ingestion & Search Microservice"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
    "pymilvus",
    "redis>=8.0.1",
    "python-multipart",
    "bs4>=0.0.2",
    "html2text>=2025.4.15",
    "pandas>=3.0.3",
    "tabulate>=0.9.0,<0.10.0",
    "playwright>=1.49.0",
    "pdfplumber>=0.11.4",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
